fixed JPMS bug